<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">gaurav_s_application1</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_answer">Answer</string>
  <string name="lbl_next">Next</string>
  <string name="msg_sequrity_questi">Sequrity Question</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account?  Sign up.</string>
  <string name="msg_michellerock_gm">Michellerock@gmail.com</string>
  <string name="lbl_dark">Dark</string>
  <string name="lbl_enter_last_name">Enter Last Name</string>
  <string name="msg_username_or_ema">Username or Email</string>
  <string name="msg_password_encryp">Password Encryption</string>
  <string name="lbl_resend">Resend</string>
  <string name="msg_michellerock_co">michellerock.com</string>
  <string name="lbl_first_name">First Name</string>
  <string name="msg_what_was_your_f">What was your first pet name?</string>
  <string name="msg_create_your_acc">Create Your Account</string>
  <string name="lbl_rock">Rock</string>
  <string name="lbl_website">Website</string>
  <string name="lbl_offers">Offers</string>
  <string name="msg_otp_is_send_to">OTP Is Send to +91 01234567890</string>
  <string name="lbl_calendar">Calendar</string>
  <string name="lbl_email_sign_in">Email Sign in</string>
  <string name="lbl_ashfak_sayem">Ashfak Sayem</string>
  <string name="lbl_create_account">Create Account</string>
  <string name="lbl_sign_in">Sign in</string>
  <string name="lbl_refer_a_friend">Refer a Friend</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum vulputate nisi aenean risus, nulla ultrices feugiat facilisi ut. In nunc tincidunt dolor placerat suscipit. Risus justo elementum at in malesuada fringilla lacus pellentesque.</string>
  <string name="msg_forgot_password">Forgot Password?</string>
  <string name="msg_enter_mobile_nu">Enter Mobile Number</string>
  <string name="msg_sign_in_with_go">Sign in with Google</string>
  <string name="lbl_set_password">Set Password</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_rewards">Rewards</string>
  <string name="msg_payments_method">Payments Methods</string>
  <string name="lbl_email_id">Email Id</string>
  <string name="msg_didn_t_get_the">Didn\u2019t get the code?</string>
  <string name="lbl_save">Save</string>
  <string name="lbl_support">Support</string>
  <string name="lbl_light">Light</string>
  <string name="lbl_email">Email</string>
  <string name="msg_or_continue_wit">Or continue with</string>
  <string name="msg_a_text_message">A text message with a 6-digit verification code was just sent to ***** ***27</string>
  <string name="lbl_pluto">Pluto</string>
  <string name="lbl_enter_email_id">Enter Email Id</string>
  <string name="lbl_2">2</string>
  <string name="lbl_last_name">Last Name</string>
  <string name="msg_enter_first_nam">Enter First Name</string>
  <string name="lbl_michelle">Michelle</string>
  <string name="msg_didn_t_recieved">Didn\u2019t Recieved Code ? Resend </string>
  <string name="msg_otp_verificatio">OTP Verification</string>
  <string name="msg_phone_verificat">Phone Verification</string>
  <string name="lbl_login">Login</string>
  <string name="msg_sign_in_with_li">Sign in with Linkedin</string>
  <string name="lbl_lorem_ipsum">Lorem ipsum</string>
  <string name="lbl_1_2323232323">+1 2323232323</string>
  <string name="msg_ashfaksayem_gma">ashfaksayem@gmail.com</string>
  <string name="msg_sign_in_with_fa">Sign in with Facebook</string>
  <string name="lbl_mobile_number">Mobile Number</string>
  <string name="lbl_sign_in2">Sign In</string>
  <string name="lbl_email_id2">Email ID</string>
  <string name="msg_enter_your_emai">Enter Your Email</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_colour_scheme">Colour Scheme</string>
  <string name="lbl_verify_otp">Verify OTP</string>
  <string name="msg_we_ve_protectec">We\u2019ve protectected your data from abuse access.</string>
  <string name="lbl_address">Address</string>
  <string name="lbl_enter_password">Enter Password</string>
  <string name="lbl_remember_me">Remember me</string>
  <string name="msg_terms_and_condi">Terms And Conditions</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>
